<resources>
    <string name="app_name">Tree Torah</string>
    <string name="action_settings">Settings</string>

    <string name="hintArvoresCortadas">Nº de árvores cortadas</string>
    <string name="hintAno">Ano</string>
    <string name="hintVolume">Volume (1m³)</string>
    <string name="hintArvoresReposta">Quantidade de árvores repostas</string>
    <string name="btnSalvar">Salvar</string>
    <string name="AnoTitle">Digite o ano</string>
    <string name="TitleEstate">Escolha o estado</string>
    <string name="TitleArvCortada">Total de árvores cortadas</string>
    <string name="TitleVolume">Volume total de árvores cortadas</string>
    <string name="TitleArvReposta">Total de árvores repostas</string>
    <string name="ano_valor">Ano: %s</string>
    <string name="multa_valor">Valor a ser pago: R$ %s</string>
    <string name="arvore_cortada_valor">Total de árvores cortadas: %s</string>
    <string name="volume_valor">Volume total: %s m³</string>
    <string name="arvore_reposta_valor">Total de árvores repostas: %s</string>
    <string name="estado_valor">Estado: %s</string>

    <string-array name="estados_drop">
    <item>AC</item>
    <item>AL</item>
    <item>AP</item>
    <item>AM</item>
    <item>BA</item>
    <item>CE</item>
    <item>DF</item>
    <item>ES</item>
    <item>GO</item>
    <item>MA</item>
    <item>MT</item>
    <item>MS</item>
    <item>MG</item>
    <item>PA</item>
    <item>PB</item>
    <item>PR</item>
    <item>PE</item>
    <item>PI</item>
    <item>RJ</item>
    <item>RN</item>
    <item>RS</item>
    <item>RO</item>
    <item>RR</item>
    <item>SC</item>
    <item>SP</item>
    <item>SE</item>
    <item>TO</item>
</string-array>
</resources>
